feat: Extraindo texto de arquivo pdf e tratando o texto

--- a/LangChain/RAG/hands_on.ipynb
+++ b/LangChain/RAG/hands_on.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "407b0d17",
    "metadata": {},
    "outputs": [],
@@ -39,15 +39,59 @@
    "execution_count": null,
    "id": "e356faf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\irani\\Desktop\\Personal code\\LLM\\Using LLM\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{\n",
+      "    \"name\": \"livreto-base-evidencia\",\n",
+      "    \"metric\": \"cosine\",\n",
+      "    \"host\": \"livreto-base-evidencia-y4phmo4.svc.aped-4627-b74a.pinecone.io\",\n",
+      "    \"spec\": {\n",
+      "        \"serverless\": {\n",
+      "            \"region\": \"us-east-1\",\n",
+      "            \"cloud\": \"aws\",\n",
+      "            \"read_capacity\": {\n",
+      "                \"mode\": \"OnDemand\",\n",
+      "                \"status\": {\n",
+      "                    \"state\": \"Ready\",\n",
+      "                    \"current_shards\": null,\n",
+      "                    \"current_replicas\": null\n",
+      "                }\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"status\": {\n",
+      "        \"ready\": true,\n",
+      "        \"state\": \"Ready\"\n",
+      "    },\n",
+      "    \"vector_type\": \"dense\",\n",
+      "    \"dimension\": 1536,\n",
+      "    \"deletion_protection\": \"disabled\",\n",
+      "    \"tags\": {\n",
+      "        \"embedding_model\": \"text-embedding-3-small\"\n",
+      "    }\n",
+      "}]\n"
+     ]
+    }
+   ],
    "source": [
-    "import pinecone\n",
+    "from pinecone import Pinecone\n",
     "\n",
-    "pinecone.init(api_key=pinecone_api_ley, environment=pinecone_env)\n",
-    "# opcional: verificar que o index existe\n",
-    "if index_pinecone not in pinecone.list_indexes():\n",
-    "    raise Exception(f\"Index {index_pinecone} não encontrado\")\n",
-    "index = pinecone.Index(index_pinecone)"
+    "pc = Pinecone(api_key=pinecone_api_ley)\n",
+    "index = pc.Index(index_pinecone)\n",
+    "\n",
+    "# Verificando se está tudo ok\n",
+    "print(pc.list_indexes())"
    ]
   },
   {
@@ -55,7 +99,51 @@
    "id": "0ce9ff9d",
    "metadata": {},
    "source": [
-    "# Extrair texto do PDF"
+    "# 2. Extrair texto do PDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a03412fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existe? False\n",
+      "Caminho absoluto: C:\\Users\\irani\\Desktop\\Personal code\\LLM\\Using LLM\\LangChain\\RAG\\LangChain\\RAG\\Data\\Livreto_BaseEvidencia_2019.11.21.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path(\"LangChain/RAG/Data/Livreto_BaseEvidencia_2019.11.21.pdf\")\n",
+    "print(\"Existe?\", path.exists())\n",
+    "print(\"Caminho absoluto:\", path.resolve())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d854c876",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdfplumber\n",
+    "import json\n",
+    "\n",
+    "path = \"Data/Livreto_BaseEvidencia_2019.11.21.pdf\"\n",
+    "pages=[]\n",
+    "with pdfplumber.open(path) as pdf:\n",
+    "    for i , p in enumerate(pdf.pages, start=1):\n",
+    "        text = p.extract_text() or \"\"\n",
+    "        pages.append({\"page\": i, \"text\": text})\n",
+    "\n",
+    "with open(\"data/pdf_pages_livreto.json\",\"w\",encoding=\"utf-8\") as f:\n",
+    "    json.dump(pages,f,ensure_ascii=False,indent=2)"
    ]
   },
   {
@@ -64,6 +152,68 @@
    "metadata": {},
    "source": [
     "# Limpeza e normalização de texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dcb95af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def limpar_texto(texto: str) -> str:\n",
+    "    if not texto:\n",
+    "        return \"\"\n",
+    "\n",
+    "    # Remove caracteres estranhos comuns de OCR\n",
+    "    texto = re.sub(r'[^\\wÀ-ÿ\\s.,;:!?()\\-\"“”]', ' ', texto)\n",
+    "\n",
+    "    # Remove letras soltas em linhas (ex: O\\nI\\nR\\n)\n",
+    "    texto = re.sub(r'(?:\\b[A-ZÀ-Ý]\\b\\s*){3,}', ' ', texto)\n",
+    "\n",
+    "    # Normaliza quebras de linha\n",
+    "    texto = re.sub(r'\\n{2,}', '\\n', texto)\n",
+    "    texto = re.sub(r'\\n', ' ', texto)\n",
+    "\n",
+    "    # Normaliza espaços\n",
+    "    texto = re.sub(r'\\s{2,}', ' ', texto)\n",
+    "\n",
+    "    return texto.strip()\n",
+    "\n",
+    "def limpar_json_paginas(paginas: list) -> list:\n",
+    "    json_limpo = []\n",
+    "\n",
+    "    for pagina in paginas:\n",
+    "        texto_limpo = limpar_texto(pagina.get(\"text\", \"\"))\n",
+    "\n",
+    "        # ignora páginas vazias após limpeza\n",
+    "        if texto_limpo:\n",
+    "            json_limpo.append({\n",
+    "                \"page\": pagina[\"page\"],\n",
+    "                \"text\": texto_limpo\n",
+    "            })\n",
+    "\n",
+    "    return json_limpo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "efd9dc72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"data/pdf_pages_livreto.json\", encoding=\"utf-8\") as f:\n",
+    "    paginas = json.load(f)\n",
+    "\n",
+    "json_limpo = limpar_json_paginas(paginas)\n",
+    "\n",
+    "with open(\"data/pdf_pages_livreto_clean.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(json_limpo, f, ensure_ascii=False, indent=2)\n"
    ]
   },
   {
@@ -89,6 +239,22 @@
    "source": [
     "# Consultas e recuperação dos dados"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "127d58c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "droga\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
