--- a/SDK standard/function_calling.ipynb
+++ b/SDK standard/function_calling.ipynb
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "61eb007b",
    "metadata": {},
    "outputs": [],
@@ -1505,10 +1505,7 @@
     "# Recria o contexto: pergunta original + resultado da tool (como mensagem \"user\")\n",
     "followup_input = [\n",
     "    {\"role\": \"user\", \"content\": \"Qual o meu horóscopo de hoje? Sou de peixes\"},\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": f\"[{tool_name} result]\\n{tool_result}\"\n",
-    "    }\n",
+    "    {\"role\": \"user\", \"content\": f\"[{tool_name} result]\\n{tool_result}\"}\n",
     "]"
    ]
   },
