doc: Documentando RAG linear e RAG Agêntico

--- a/LangChain/RAG/hands_on.ipynb
+++ b/LangChain/RAG/hands_on.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "407b0d17",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "e356faf6",
    "metadata": {},
    "outputs": [
@@ -72,6 +72,34 @@
       "    \"tags\": {\n",
       "        \"embedding_model\": \"text-embedding-3-small\"\n",
       "    }\n",
+      "}, {\n",
+      "    \"name\": \"ods-onu\",\n",
+      "    \"metric\": \"cosine\",\n",
+      "    \"host\": \"ods-onu-y4phmo4.svc.aped-4627-b74a.pinecone.io\",\n",
+      "    \"spec\": {\n",
+      "        \"serverless\": {\n",
+      "            \"region\": \"us-east-1\",\n",
+      "            \"cloud\": \"aws\",\n",
+      "            \"read_capacity\": {\n",
+      "                \"mode\": \"OnDemand\",\n",
+      "                \"status\": {\n",
+      "                    \"state\": \"Ready\",\n",
+      "                    \"current_shards\": null,\n",
+      "                    \"current_replicas\": null\n",
+      "                }\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"status\": {\n",
+      "        \"ready\": true,\n",
+      "        \"state\": \"Ready\"\n",
+      "    },\n",
+      "    \"vector_type\": \"dense\",\n",
+      "    \"dimension\": 512,\n",
+      "    \"deletion_protection\": \"disabled\",\n",
+      "    \"tags\": {\n",
+      "        \"embedding_model\": \"text-embedding-3-small\"\n",
+      "    }\n",
       "}]\n"
      ]
     }
@@ -96,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "a03412fc",
    "metadata": {},
    "outputs": [
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "d854c876",
    "metadata": {},
    "outputs": [],
@@ -148,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "dcb95af9",
    "metadata": {},
    "outputs": [],
@@ -192,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "efd9dc72",
    "metadata": {},
    "outputs": [],
@@ -218,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "faedbfe1",
    "metadata": {},
    "outputs": [],
@@ -261,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "61eb1ed0",
    "metadata": {},
    "outputs": [
@@ -289,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "ef2a902e",
    "metadata": {},
    "outputs": [],
@@ -306,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "4882be22",
    "metadata": {},
    "outputs": [
@@ -327,7 +355,8 @@
     "    documents=chunks, # Usando a variável 'chunks'\n",
     "    embedding=embeddings_model,\n",
     "    index_name=index_pinecone,\n",
-    "    pinecone_api_key=pinecone_api_ley\n",
+    "    pinecone_api_key=pinecone_api_ley,\n",
+    "    namespace=\"livreto-metricis\"\n",
     ")\n",
     "\n",
     "print(f\"Sucesso! {len(chunks)} documentos foram indexados no Pinecone.\")"
@@ -343,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "127d58c9",
    "metadata": {},
    "outputs": [
@@ -386,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0b651f2c",
    "metadata": {},
    "outputs": [],
@@ -402,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1ea6c0cf",
    "metadata": {},
    "outputs": [
@@ -411,8 +440,8 @@
      "output_type": "stream",
      "text": [
       "1. Nome da Etapa: V JUSTIFICATIVA\n",
-      "2. Justificativa curta: O texto aborda a valoração de custos e o impacto de cortes orçamentários, elementos centrais na justificativa de políticas.\n",
-      "3. Página de referência do guia original: 16.\n"
+      "2. Justificativa curta: O texto aborda a alocação e valoração de recursos, destacando a necessidade de justificar cortes orçamentários com base em evidências.\n",
+      "3. Página de referência do guia original: 16\n"
      ]
     }
    ],
@@ -465,6 +494,169 @@
     "\n",
     "resposta = chain.invoke(query_usuario)\n",
     "print(resposta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0fd18cb",
+   "metadata": {},
+   "source": [
+    "# É isso? Dominamos tudo sobre agentes e RAG? \n",
+    "\n",
+    "# **CLARO QUE NÃO**\n",
+    "\n",
+    "O que fizemos ali acima, especialmente o conteúdo dessa última célula é o que pode-se chamar de RAG Linear (Chain) mas existem mais coisas para se saber no mundo real... \n",
+    "\n",
+    "Mas primeiro vamos entender exatamente o que e o RAG Linear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5e4eec1",
+   "metadata": {},
+   "source": [
+    "# **RAG Linear (Chain)\n",
+    "\n",
+    "**Definição:**\n",
+    "\n",
+    "O RAG Linear (ou Retrieval-Augmented Generation de etapa única) é a arquitetura fundamental para sistemas que buscam enriquecer o conhecimento de um modelo de linguagem com dados privados. De maneira didática, podemos compará-lo a uma prova de consulta com tempo limitado.\n",
+    "\n",
+    "Imagine que você entrega uma pergunta a um assistente, mas ele não tem a resposta na memória. Antes de responder, ele corre até uma estante específica, pega o livro mais relevante, lê um parágrafo e, com base no que leu, redige a resposta.\n",
+    "\n",
+    "Aqui está o funcionamento técnico dividido em quatro pilares:\n",
+    "\n",
+    "**1. A Preparação (Indexação):**\n",
+    "\n",
+    "Antes de qualquer pergunta ser feita, seus documentos passam por um processo de \"tradução\". Fragmentação (Chunking): O texto é quebrado em pedaços menores para não ultrapassar o limite de leitura da IA. Embeddings: Cada pedaço é transformado em uma lista de números (vetores) que representam o seu significado semântico. Vector Store: Esses vetores são armazenados em um banco de dados (como o Pinecone que você configurou), organizados por \"proximidade de assunto\".\n",
+    "\n",
+    "**2. A Recuperação (Retrieval):**\n",
+    "\n",
+    "Quando o usuário envia uma query, o sistema não busca por palavras-chave (como no Google antigo), mas por conceitos. A pergunta também é transformada em vetor. O sistema faz um cálculo matemático para encontrar os $k$ fragmentos no banco de dados que possuem os vetores mais parecidos com o da pergunta.\n",
+    "\n",
+    "**3. O Aumento (Augmentation):** \n",
+    "\n",
+    "Nesta fase, ocorre a montagem do Prompt Final. O sistema \"embala\" a pergunta do usuário dentro de um envelope de contexto. \"Com base nestes fragmentos de texto: [CONTEXTO RECUPERADO], responda à seguinte pergunta: [PERGUNTA DO USUÁRIO].\" O RunnablePassthrough() que você usou no código serve justamente para garantir que a pergunta passe intacta por esse processo de montagem.\n",
+    "\n",
+    "**4. A Geração (Generation)**\n",
+    "\n",
+    "Finalmente, o LLM (como o GPT-4o) recebe esse envelope. Ele não está mais tentando \"adivinhar\" a resposta com base no que aprendeu na internet; ele está agindo como um analista que resume os fatos apresentados no contexto para gerar a resposta final.\n",
+    "\n",
+    "**Por que ele é chamado de \"Linear\"?**\n",
+    "\n",
+    "Diferente do Agente (que é circular e pode decidir buscar mais informações se a primeira busca for ruim), o RAG Linear segue uma linha reta:\n",
+    "- 1. Recebe Entrada \n",
+    "- 2. Busca Contexto \n",
+    "- 3. Gera Resposta \n",
+    "- 4. Entrega ao Usuário.\n",
+    "\n",
+    "**Vantagens:**\n",
+    "\n",
+    "- 1. Velocidade: É extremamente rápido, pois faz apenas uma chamada ao banco de vetores.\n",
+    "- 2. Previsibilidade: Você sabe exatamente qual caminho o dado percorreu.\n",
+    "\n",
+    "**Limitações:** \n",
+    "- 1. Se o \"buscador\" (retriever) falhar em encontrar o parágrafo exato na primeira tentativa, o LLM não terá uma segunda chance para procurar melhor. Assim, o LLM terá que \"chutar\" ou alucinar sobre a resposta faltante."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0118a812",
+   "metadata": {},
+   "source": [
+    "# **RAG Agêntico (Agent)**\n",
+    "\n",
+    "**Definição:**\n",
+    "\n",
+    "O RAG Agêntico representa o nível mais avançado de maturidade em sistemas de Recuperação Aumentada por Geração. Enquanto o RAG Linear opera como uma \"linha de montagem\" rígida, o RAG Agêntico funciona como um pesquisador humano dotado de autonomia, senso crítico e ferramentas.\n",
+    "\n",
+    "De maneira formal e didática, podemos defini-lo através dos seguintes pilares:\n",
+    "\n",
+    "**1. O Conceito**\n",
+    "\n",
+    "Da Reação à Ação. A grande diferença reside na capacidade de raciocínio (Reasoning). Em um RAG Agêntico, o modelo de linguagem (LLM) não recebe apenas um comando para responder, mas sim um objetivo a ser alcançado.\n",
+    "\n",
+    "O Agente atua em um ciclo conhecido como ReAct (Reason + Act):\n",
+    "\n",
+    "- Pensamento: \"O usuário perguntou sobre cortes no orçamento e ODS. Preciso primeiro entender o que o manual diz sobre ciclos de orçamento.\"\n",
+    "\n",
+    "- Ação: \"Vou usar a ferramenta busca_gestao_publica.\"\n",
+    "\n",
+    "- Observação: \"O resultado da busca foi insuficiente. Preciso tentar outro termo ou buscar na ferramenta busca_ods_onu.\"\n",
+    "\n",
+    "**2. A \"Caixa de Ferramentas\" (Tool Use)**\n",
+    "\n",
+    "Diferente do modelo linear, onde o banco de dados é \"empurrado\" para a IA, no RAG Agêntico a IA escolhe quando e qual ferramenta usar. Você define funções (tools) que o agente pode chamar:\n",
+    "\n",
+    "- Ele pode decidir pesquisar no Pinecone.\n",
+    "\n",
+    "- Pode decidir fazer um cálculo matemático.\n",
+    "\n",
+    "- Pode decidir formatar o dado final usando um esquema.\n",
+    "\n",
+    "**3. A Capacidade de Auto-Correção e Iteração**\n",
+    "\n",
+    "Esta é a característica mais poderosa. O RAG Agêntico é capaz de avaliar a qualidade da informação recuperada:\n",
+    "\n",
+    "- 1. Busca Multi-etapas: Se uma pergunta complexa exige dados de duas fontes diferentes (ex: o Livreto de Políticas Públicas e o Catálogo de ODS), ele faz a primeira busca, analisa o que encontrou, e só então faz a segunda busca para complementar.\n",
+    "\n",
+    "- 2. Refinamento: Se a informação recuperada for ambígua, o agente pode decidir pesquisar novamente com palavras-chave diferentes antes de formular a resposta ao usuário.\n",
+    "\n",
+    "**4. Saída Estruturada e Validação**\n",
+    "\n",
+    "Ao utilizar o Pydantic, por exemplo, o Agente não apenas escreve um texto, mas trabalha para \"encaixar\" a realidade nos critérios que você definiu. Ele atua como um codificador:\n",
+    "\n",
+    "Ele lê o texto.\n",
+    "\n",
+    "- 1. Busca as referências.\n",
+    "\n",
+    "- 2. Valida se a classificação \"A\" ou \"B\" realmente existe no seu Enum.\n",
+    "\n",
+    "- 3. Só entrega o resultado quando todos os campos obrigatórios do seu \"Codebook\" estão preenchidos corretamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc244c6",
+   "metadata": {},
+   "source": [
+    "# **RAG Linear** x **RAG Agêntico**\n",
+    "\n",
+    "\n",
+    "**Comparação Didática: O Estagiário vs. O Analista Sênior**\n",
+    "\n",
+    "- RAG Linear (Estagiário): Você entrega uma pergunta e uma pasta de documentos. Ele lê o que está no topo da pasta e escreve o que entendeu, sem questionar se aquela informação é suficiente ou se está correta.\n",
+    "\n",
+    "- RAG Agêntico (Analista Sênior): Você entrega um objetivo (\"Classifique este projeto\"). O analista olha para a estante, escolhe os livros certos, percebe que falta uma informação sobre ODS, vai até outra seção da biblioteca, cruza os dados, verifica se a classificação segue as normas da instituição e entrega um relatório técnico padronizado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "224cae10",
+   "metadata": {},
+   "source": [
+    "# **Casos de uso**\n",
+    "\n",
+    "### **RAG Linear** \n",
+    "\n",
+    "O RAG Linear é ideal para situações de alta previsibilidade e baixo nível de ambiguidade.\n",
+    "\n",
+    "- Atendimento ao Cliente (FAQs Dinâmicos): Responder perguntas diretas baseadas em manuais de produtos ou políticas de reembolso.\n",
+    "\n",
+    "- Busca em Bases de Documentos Técnicos: Engenheiros que precisam localizar rapidamente uma especificação técnica ou um código de erro em um manual de mil páginas.\n",
+    "\n",
+    "- Análise de Sentimento com Contexto: Avaliar se um feedback de cliente é positivo ou negativo, fornecendo à IA exemplos reais de guias de estilo da marca como contexto.\n",
+    "\n",
+    "- Sumarização de Documentos Únicos: Gerar o resumo executivo de um relatório financeiro ou de uma ata de reunião que acabou de ser carregada no sistema. \n",
+    "\n",
+    "### **RAG Agêntico**\n",
+    "\n",
+    "- Revisão Sistemática de Literatura: Quando o sistema precisa classificar um estudo científico, ele usa ferramentas para consultar o Codebook (Livreto), depois consulta as ODS e, por fim, valida se a classificação faz sentido antes de gerar o JSON final.\n",
+    "\n",
+    "- Análise de Conformidade Legal (Compliance): Um agente que recebe um novo contrato e precisa verificar se ele fere cláusulas em diferentes legislações (trabalhista, ambiental, tributária), realizando buscas específicas para cada \"frente\" jurídica.\n",
+    "\n",
+    "- Suporte Técnico Avançado (Troubleshooting): Diferente do FAQ simples, aqui o agente pode pedir informações adicionais ao usuário (\"Qual a luz que está piscando?\") e, com base na resposta, decidir qual parte do esquema técnico deve investigar a seguir.\n",
+    "\n",
+    "- Relatórios de Inteligência de Mercado: Um agente que precisa consolidar dados de notícias recentes, relatórios internos de vendas e dados de concorrentes para produzir uma análise de risco."
    ]
   }
  ],
